Fix Magic Search Width Problems
Magic Search input should allow variable length, instead
of being hardcoded.  Also, recent changes broke the layout
of magic search in Swift. This also fixes extra long strings
in the search text and overflows properly.

Closes-bug: #1595754

--- a/horizon/static/framework/widgets/action-list/action-list.scss
+++ b/horizon/static/framework/widgets/action-list/action-list.scss
@@ -1,5 +1,9 @@
 action-list.btn-group {
-  padding: $padding-base-vertical $padding-base-horizontal;
+
+  &:not(:first-child) {
+    padding-left: $padding-small-vertical;
+  }
+
   &[button-tooltip] {
     cursor: pointer;
   }
